# graphql_client_simply

./: Cargo.toml  README.md
src/: lib.rs
