[package]
name = "graphql_client_simply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
poll-promise = { version = "0.2.0", features = ["web"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
graphql_client = { version = "0.11.0", features = ["reqwest-blocking"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
graphql_client = { version = "0.11.0", features = ["reqwest"] }
